✨ Add lock location
