# src/Unlocked.Api/openapi.json
@@ -174,10 +174,19 @@
   "components": {
     "schemas": {
       "LockItem": {
+        "required": [
+          "status"
+        ],
         "type": "object",
         "properties": {
           "status": {
             "$ref": "#/components/schemas/LockStatus"
+          },
+          "location": {
+            "type": [
+              "null",
+              "string"
+            ]
           }
         }
       },
